--- a/joes_assets/style.css
+++ b/joes_assets/style.css
@@ -13,7 +13,7 @@ html, body {
 body {
     justify-content: center;
     min-width: 300px;
-    background-image: url(./items_background.svg);
+    background-image: url(items_background.svg);
     background-repeat: repeat;
     background-size: 200px;
 }
